prueba fallida imagen

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <servlet-name>ProcesarPuestos</servlet-name>
         <servlet-class>com.controladores.ProcesarPuestos</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ProcesarUsuario</servlet-name>
+        <servlet-class>com.controladores.ProcesarUsuario</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>gestionAreas</servlet-name>
         <url-pattern>/GestionAreas</url-pattern>
@@ -23,6 +27,10 @@
     <servlet-mapping>
         <servlet-name>ProcesarPuestos</servlet-name>
         <url-pattern>/procesarPuestos</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ProcesarUsuario</servlet-name>
+        <url-pattern>/procesarUsuario</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
